--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -455,15 +455,14 @@ section > .grid {
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-}
-section > .grid > .card-container {
-  margin-bottom: 2rem;
+  gap: 2rem;
 }
 section > .carousel {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
+  gap: 2rem;
 }
 section > .hotels-container {
   max-width: 100vw;
@@ -475,8 +474,6 @@ section > .hotels-container > .card-container {
   width: 275px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 6px;
-  margin-right: 2rem;
-  margin-bottom: 1rem;
   cursor: pointer;
 }
 section > .hotels-container > .card-container > img {
